Update Jena version to 5.6.0